--- a/stylemainpg.css
+++ b/stylemainpg.css
@@ -11,30 +11,51 @@ body {
 .header1{
     display: grid;
     position: relative;
-   
+   top: 60px;
   text-align: center;
    
     font-family: inherit;
     font-weight: 100px;
     font-size: 60px;
-    color: azure;
+    color: rgba(240, 255, 255, 0.884);
+    border: 0.5px black;
     
 }
 p{
     font-size: 30px;
 }
-.upperside {
+.upperside  {
 
-    border: 2px solid rgb(53, 133, 224);
+    z-index:3;
     position: absolute ;
     top : 5px;
     right: 20px;
     margin-top: 10px;
-    padding: 10px 50px 10px 50px;
+  
     border-radius: 2.2rem;
-    color: #fdfdfd;
+    font-size: 50px;
+
    
 }
-a:hover {
-    color:#6da4f7 !important;}
+.upperside > button {
+    cursor: pointer;
+    width: 100%;
+    padding: 16px 16px;
+    border-radius: 1.25rem;
+    background:#6b89dd49;
+    font-weight: 600;
+    color: #d8d8d87e;
+   
+    font-family: inherit;
+    font-size: 1rem;
+    letter-spacing: 2px;
+    transition: all 0.375s;
+
+}
+.upperside > button:hover {
+
+    color:#2d6fd3 ;}
+    a:hover{
+        color:#2d6fd3
+    }
 
